# Inference-Autopsy

./: pyproject.toml
.tmp/pytest/test_jsonl_roun_trip0/: trace.jsonl
autopsy/: cli.py
autopsy/client/: __init__.py  openai_compatible.py  stream_parser.py
autopsy/fake/: generate.py
autopsy/metrics/: summary.py
autopsy/runner/: __init__.py  workload_runner.py
autopsy/traces/: derive.py  jsonl.py  schema.py
autopsy/workloads/: __init__.py  profiles.py
docs/: README.md
docs/context/: current-project-state.md  known-issues.md
docs/product/: owner-project-guide.md  project-spec.md
docs/research/: concepts-to-master.md  implementation-takeaways.md
docs/workflow/: phase-1-build-guide.md  phase-2-learning-notes.md  phase-2-testing-guide.md  phase-3-testing-guide.md
docs/writeups/: phase-3-mid-progress-writeup.md
examples/traces/: connection-error.jsonl  fake.jsonl  single-nonstream.jsonl  single.jsonl  timeout.jsonl
runs/: short_chat.jsonl
tests/: test_jsonl.py  test_openai_compatible.py  test_profiles.py  test_schema.py  test_stream_parser.py  test_summary.py  test_workload_runner.py
