# Declares dependencies and the autopsy command
[project]
name = "inference-autopsy"
version = "0.1.0"
description = "Trace-first profiler and regression tester for AI inference systems."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "rich>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
autopsy = "autopsy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["autopsy"]